[tool.poetry]
name = "cardloop"
version = "0.1.0"
description = ""
authors = ["tiago.paranhos <tiagoprn@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
python-frontmatter = "^1.0.0"
typer = {extras = ["all"], version = "^0.6.1"}
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
pytest = ">=5.2"
ipdb = "^0.13.9"
coverage = ">=5.5"
pylint = "^2.10.2"
black = ">=21.9b0"
isort = {extras = ["colors"], version = "^5.9.3"}
pytest-cov = ">=2.12.1"
pytest-sugar = ">=0.9.4"
pudb = ">=2021.1"
time-machine = "^2.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

